Fix navbar wrapping between 997 and 1157px (#3840)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -114,6 +114,10 @@ a:visited {
   color: var(--ifm-color-primary);
 }
 
+.navbar .navbar__inner {
+  flex-wrap: nowrap;
+}
+
 .navbar .navbar__items {
   flex: 1 1 auto;
 }
